--- a/app/src/main/res/layout/widget_weather_vertical.xml
+++ b/app/src/main/res/layout/widget_weather_vertical.xml
@@ -43,6 +43,8 @@
                 android:id="@+id/iv_widget_sky"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
                 android:layout_gravity="center"
                 tools:ignore="ContentDescription" />
 
